# notes-app

./: README.md
backend/: .env.example  init_db.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: about.py  auth.py  notes.py  shares.py
backend/app/core/: config.py  database.py  exceptions.py  pagination.py  security.py
backend/app/models/: base.py  note.py  share.py  token.py  user.py
backend/app/repositories/: base.py  note_repo.py  share_repo.py  token_repo.py  user_repo.py
backend/app/schemas/: common.py  note.py  share.py  token.py  user.py
backend/app/services/: auth_service.py  export_service.py  note_service.py  share_service.py
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useNetwork.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
