[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "email-validator==2.1.1",
    "fastapi==0.111.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy[asyncio]==2.0.30",
    "uvicorn[standard]==0.30.1",
]
